--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+1.0.9  2014-05-30
+  * Thumbnails in asset library now link to crop view or download depending on asset type
+  * You can now add links to images in TenonContent
+
 1.0.8  2014-05-29
   * Add linking to assets in medium
 
