--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+1.0.11  2014-06-02
+  * Add Two/Three/Four Column Image and Text Row Types
+
 1.0.10  2014-05-30
   * Fix issues with adding links to images
 
