--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,9 @@
+1.0.14  2014-06-02
+  * Fix display partial bugs in new row types
+
+1.0.13  2014-06-02
+  * Fix display partial bugs in new row types
+
 1.0.12  2014-06-02
   * Added scrolling to TenonContent Library
 
