--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,15 @@
+1.0.16 2014-06-04
+  * Add more control over redirect paths after creating and updating
+    items in Tenon.  Set the default configuration in
+    config/initializers/tenon.rb (Only :index and :edit are valid)
+
+    config.after_create_path = :index
+    config.after_update_path = :edit
+
+    Alternately, override the after_update_path or after_create_path
+    methods in your subclassed resource controllers if you need more
+    fine-grained control.
+
 1.0.15  2014-06-02
   * Add optional :active param to nav_item helper to add additional conditions
     for item to appear active
