--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+1.0.17 2014-06-05
+  * Add Tenon::MySettings.site_title to the util nav
+
 1.0.16 2014-06-04
   * Add more control over redirect paths after creating and updating
     items in Tenon.  Set the default configuration in
