--- a/README.rdoc
+++ b/README.rdoc
@@ -62,3 +62,54 @@ Restart your app and navigate to /tenon
 If you want to be able to use rspec, which would be good, you will also need to run:
 
     bundle exec rails generate rspec:install
+
+
+== Scaffolding
+
+TODO: Write this section
+
+== Item Revisions/History
+
+TODO: Write this section
+
+== Internationalization
+
+Although Tenon is currently anglocentric it supports the addition of additional
+languages and provides an interface for managing content in multiple languages.
+
+To add internationalized fields, follow these steps:
+
+1. Tell Tenon which languages you want to support in config/initializers/tenon.rb
+
+    config.languages = {
+      "French" => :fr,
+      "German" => :de
+      # etc.
+    }
+
+English is always assumed to exist and be the default language, but this will likely change in the future.
+
+2. Create or update config/i18n_fields.yml to tell Tenon which fields you would like to have internationalized.
+
+    tables:
+      cars:
+        - title
+        - description
+
+      events:
+        - title
+        - location
+        - description
+
+3. Generate and run the internationalization migration.  The generator will only try to create columns that don't already exist, so you can use this generator multiple times throughout the development of your application.
+
+    rails generate tenon:i18n_migrations
+    rake db:migrate
+
+4. Ensure that you have passed the i18n: true flag anywhere you are using tenon_content on a model.
+
+    class MyModel < ActiveRecord::Base
+      tenon_content :description, i18n: true
+    end
+
+Once you've done this and restarted your app you will see a language selection nav in the sidebar of each form that has internationalized fields.
