--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+1.0.29 2014-07-31
+  * Added i18n support, see README for details
+
 1.0.28 2014-07-14
   * Added quiet_assets to development gems
   * Added "or remove" link to item asset fields. Uses Javascript to reset fields to original "No asset selected." values. HasAsset checks if an Item had a previous ItemAsset and deletes it if passed a blank #{asset_name}_id value.
