--- a/README.rdoc
+++ b/README.rdoc
@@ -79,15 +79,13 @@ languages and provides an interface for managing content in multiple languages.
 
 To add internationalized fields, follow these steps:
 
-1. Tell Tenon which languages you want to support in config/initializers/tenon.rb
+1. Tell Tenon which languages you want to support in config/initializers/tenon.rb (You don't need to add English, Tenon always assumes its in use.)
 
     config.languages = {
       "French" => :fr,
       "German" => :de
       # etc.
     }
-
-English is always assumed to exist and be the default language, but this will likely change in the future.
 
 2. Create or update config/i18n_fields.yml to tell Tenon which fields you would like to have internationalized.
 
