--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+1.0.31 2014-08-01
+  * Change the Protect Changes functionality so that users are
+    not prompted to save their changes when there are no changes to save
+
 1.0.30 2014-07-31
   * Update i18n support for nested models
 
