--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,8 @@
-1.0.34 2014-08-09
+1.0.35 2014-09-10
+  * Check if the item that has_asset has been saved when looking up its
+    attachments.
+
+1.0.34 2014-09-09
   * Redirect to Tenon's root_path instead of "/tenon" when CanCan::AccessDenied
     is raised.  This allows you to mount Tenon in other directories and adds
     support for sites using relative_url_root.
