--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+1.0.37 2014-09-11
+  * Add Four Columns of Text as a Tenon Content row option
+
 1.0.36 2014-09-11
   * Expand on the changes in 1.0.35.
 
