--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+1.0.38 2014-09-17
+  * Update acts_as_taggable_on gem to '~> 3.4' in gemspec
+
 1.0.37 2014-09-11
   * Add Four Columns of Text as a Tenon Content row option
 
