--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+1.0.39 2014-09-23
+  * Disable mobile device viewport scrolling
+  * Fix Font Awesome Icon Sizes
+
 1.0.38 2014-09-17
   * Update acts_as_taggable_on gem to '~> 3.4' in gemspec
 
