--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,8 @@
-1.0.43 2014-11-11
+1.0.44 2014-11-11
   * fix asset thumbnails when displayed as an attachment on an object
+
+1.0.43 2014-10-23
+  * remove Resque dependency
 
 1.0.42 2014-10-20
   * remove "/tenon/" from the table names in i18n_fields.yml
