--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+1.0.46 2014-11-17
+	* fix the language switcher on pages, posts and events
+
 1.0.45 2014-11-15
   * update scafold_small model template to new default_scope syntax
   * render default file thumbnail on the front-end if Tenon content is saved without picking an image (rather than throw an exception)
