--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+1.0.52 2014-12-30
+  * fix some platform_hints bugs
+  * improve site title & link handling (i.e., link to the path where Tenon is mounted, consistently set title to 'Tenon' if no site title is set)
+
 1.0.51 2014-12-29
   * enable platform hints on iOS, Android, and Windows
 
