--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,16 @@
-1.0.58 2015-02-10
+1.0.60 2015-02-10
   * fix for PieceHelper responsive images <img> src attribute
   * add default :size to all pieces for all row types
+
+1.0.59 2015-02-07
+  * Add more modal options to Tenon.features.ModalWindows for targeting.
+  * Adjust TenonContent to use new ModalWindows options.
+  * Yank 1.0.58
+
+1.0.58 2015-02-06
+  * You can now use Tenon Content within nested fields
+  * Supply a selector data-sortable-handle on your ul.sortable tags if you want to define specific sortable handles
+    (http://api.jqueryui.com/sortable/#option-handle)
 
 1.0.57 2015-02-04
   * added responsive image support for tenon_content
