--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+1.0.64 2015-03-20
+  * added two more header options to medium-on-tenon
+
 1.0.63 2015-03-18
   * removed all reference to acts_as_taggable_on gem from Tenon
 
