--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+1.0.65 2015-05-28
+  * Bump nokogiri to 1.5.11 to fix conflict with Fog
+
 1.0.64 2015-03-20
   * added two more header options to medium-on-tenon
   * added ability to add 'btn' class to a link in medium-on-tenon
