--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+1.0.66 2015-06-16
+  * Fix Tenon devise password reset functionality.
+
 1.0.65 2015-05-28
   * Bump nokogiri to 1.5.11 to fix conflict with Fog
 
