--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+1.0.69 2015-06-18
+  * tenon content display partial namespacing (.tn-tc)
+  * tenon breakpoint namespacing (.tn-bp)
+
 1.0.68 2015-06-17
   * added a new content type: two columns of text with a background image.
   * namespacing some more tn-tc classes
