--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+1.0.73 2015-08-06
+  * Set fixed height for .tn-tc-bottombar so it displays again
+  * Make Tenon content action icons 20px rather than 1em
+
 1.0.72 2015-07-14
   * Bump sass-rails to 5.0.3
 
