--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+1.0.76 2015-10-27
+  * remove .css from .css.scss files to avoid deprecation notice
+  * subpage.path updates when parent page is saved
+
 1.0.75 2015-09-28
   * fix password reset mailer link
   * make Correct This links use Tenon mounted path
