--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+1.1.3 2015-11-12
+  * Delete ckeditor samples from asset pipeline
+
 1.1.2 2015-11-12
   * Remove reliance on js-routes
   * Adjust asset JST files to pull routes from @asset object
