--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+1.1.4 2015-11-12
+  * Remove CKEditor from asset pipeline
+  * Copy CKEditor files to public/ckeditor on rails generate tenon:install
+  * Update README to reflect CKEditor plans
+
 1.1.3 2015-11-12
   * Delete ckeditor samples from asset pipeline
 
