--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+1.0.76 2015-10-15
+  * Fix error when switching image sides in "Image and Text (No Wrap)" Tenon
+    Content
+
 1.0.75 2015-09-28
   * fix password reset mailer link
   * make Correct This links use Tenon mounted path
