--- a/README.rdoc
+++ b/README.rdoc
@@ -270,16 +270,16 @@ searched.
 
 Because many filtering tasks are similar, filterers that inherit from <tt>Tenon::BaseFilterer</tt> (and thus <tt>Tenon::GenericFilterer</tt>) have access to a few convenience methods for easier filtering.  These methods are:
 
-eq(field, value):: Used to check if +field+ is equal to +value+
-ilike(field, value):: Used to check if +field+ <em>ILIKE matches</em> +value+
-gt(field, value):: Used to check if +field+ is greater than +value+
-lt(field, value):: Used to check if +field+ is less than +value+
-gte(field, value):: Used to check if +field+ is greater than or equal to +value+
-lte(field, value):: Used to check if +field+ is less than or equal to +value+
+<tt>eq(field, value)</tt>:: Used to check if +field+ is equal to +value+
+<tt>ilike(field, value)</tt>:: Used to check if +field+ <em>ILIKE matches</em> +value+
+<tt>gt(field, value)</tt>:: Used to check if +field+ is greater than +value+
+<tt>lt(field, value)</tt>:: Used to check if +field+ is less than +value+
+<tt>gte(field, value)</tt>:: Used to check if +field+ is greater than or equal to +value+
+<tt>lte(field, value)</tt>:: Used to check if +field+ is less than or equal to +value+
 
 These methods will always simply return the current scope if +value+ is not +.present?+, so there's no need to check for the presence of a param.
 
-Here is an example of the imagined +PostFilterer+ using these convenience methods:
+Here is an example of the imagined +PostFilterer+ rewritten using these convenience methods:
 
   class PostFilterer < Tenon::GenericFilterer #:nodoc:
     def filter
